Updates from Overleaf

--- a/7_sensitivity.tex
+++ b/7_sensitivity.tex
@@ -24,7 +24,7 @@ The ANITA acceptance (\effarea) is calculated following:
 \end{equation}
 \noindent where
  \effvol is the volumetric acceptance and
- $\ell_{{int}}(E)$ is the average interaction length in that energy bin. %\CD{I think we use the $\nu$ CC length, although we should do something a bit smarter than that. Do we want to be more specific here?} 
+ $\ell_{{int}}(E)$ is the average interaction length in that energy bin. 
 The interaction length is calculated following:
  \begin{equation}
    \label{eq:intlength}
@@ -124,45 +124,6 @@ four cosmogenic neutrino models~\cite{kkss2002,takami2009,ahlers2012,kotera2010c
 }
  \label{fig:sensitivity}
 \end{figure}
-
-%\subsection{Expected number of events}
-%\label{subsec:events}
-%Using the acceptance, \effarea, and the fluence, EF(E), relative to a
-%specific flux model, the expected number of events
-%detected by the ANITA-III flight, is calculated as follows:
-%\begin{equation}
-%  n_{obs} = \log(10) \int dT \int d\log_{10} (E/\ev)
-%  \effarea EF(E) \, ,
-%\label{eq:numobs}
-%\end{equation} 
-%\noindent where $T$ is the experiment live time.
-%
-%Table~\ref{tab:nobs} shows the expected numbers of events observed by
-%ANITA-III from several cosmogenic neutrino models.
-%
-%The Ave et al fluxes~\cite{ave2005cosmogenic} consider proton or iron primaries.
-%For iron primaries, the expected neutrino flux highly depends on the cosmological evolution, $n$,
-%of the source, and on the maximum cosmic ray energy at the source, $E_{max}$.
-%The Kotera et al fluxes~\cite{kotera2010cosmogenic} use a  mixed chemical composition model for which the extragalactic cosmic
-%ray composition at the source is assumed to be similar to that of low energy Galactic cosmic rays.
-
-%\subsection{Parameter variations} 
-%label{subsec:uncertainties}
-%In this Subsection we explore how varying some of the physics model
-%parameters affects the projected ANITA sensitivity.
-%%Can run some test simulations to study these 
-
-%\subsubsection{Varying cross-section models}
-%\label{subsubsec:uncertainties_xsec}
-
-%\subsubsection{Varying thresholds}
-%\label{subsubsec:uncertainties_threshold}
-
-
-%\subsubsection{Varying ice thickness models}
-%\label{subsubsec:uncertainties_ice}
-%\todo[inline]{LINDA: calculate acceptance changes with different ice thicknesses of CRUST 2.0}
-
 
 \section{Summary and Future improvements}
 \label{sec:future}
